# auth_test

./: .gitignore  CLAUDE.md  PLAN.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0b97320a77c2_add_google_oauth_support.py  9a1ae078b6ec_add_refresh_tokens_table.py  e16eb73378b8_create_users_table.py
backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  users.py
backend/app/services/: oauth.py
backend/tests/: conftest.py  test_auth.py  test_oauth.py  test_routers_auth.py  test_routers_oauth.py  test_routers_users.py
docs/: AUTH_TUTORIAL.md  GOOGLE_OAUTH_SETUP.md
docs/plans/: 2026-01-24-phase1-testing-infrastructure.md  2026-01-28-google-oauth-implementation-plan.md  2026-01-28-google-oauth-login-design.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/: GoogleLoginButton.css  GoogleLoginButton.test.tsx  GoogleLoginButton.tsx  LoginForm.test.tsx  LoginForm.tsx  Navbar.tsx  ProtectedRoute.tsx  RegisterForm.test.tsx  RegisterForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.css  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: api.test.ts  api.ts  auth.ts
frontend/src/types/: auth.ts
frontend/src/utils/: errorHandler.ts  (+1 more)
